// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signals SpamTrapsPreview Component renders correctly 1`] = `
<PageLink
  to="/signals/spam-traps/ip-pool/best-pool"
>
  <Panel>
    <Panel.Section>
      <ChartHeader
        hideLine={true}
        title="Spam Trap Monitoring"
        tooltipContent="TODO"
      />
    </Panel.Section>
    <Panel.Section>
      <BarChart
        disableHover={true}
        fill="#B157CE"
        gap={0.5}
        height={170}
        margin={
          Object {
            "bottom": 0,
            "left": 0,
            "right": 0,
            "top": 0,
          }
        }
        timeSeries={
          Array [
            1,
            2,
            3,
          ]
        }
        width="99%"
        xAxisProps={
          Object {
            "hide": true,
          }
        }
        xKey="date"
        yAxisProps={
          Object {
            "hide": true,
          }
        }
        yKey="trap_hits"
        yRange={
          Array [
            "auto",
            "auto",
          ]
        }
      />
    </Panel.Section>
  </Panel>
</PageLink>
`;

exports[`Signals SpamTrapsPreview Component renders empty correctly 1`] = `
<PageLink
  to="/signals/spam-traps/ip-pool/best-pool"
>
  <Panel>
    <Panel.Section>
      <ChartHeader
        hideLine={true}
        title="Spam Trap Monitoring"
        tooltipContent="TODO"
      />
    </Panel.Section>
    <Panel.Section>
      <Callout
        title="No Data Available"
      >
        Insufficient data to populate this chart
      </Callout>
    </Panel.Section>
  </Panel>
</PageLink>
`;

exports[`Signals SpamTrapsPreview Component renders error correctly 1`] = `
<PageLink
  to="/signals/spam-traps/ip-pool/best-pool"
>
  <Panel>
    <Panel.Section>
      <ChartHeader
        hideLine={true}
        title="Spam Trap Monitoring"
        tooltipContent="TODO"
      />
    </Panel.Section>
    <Panel.Section>
      <Callout
        title="Unable to Load Data"
      >
        error message
      </Callout>
    </Panel.Section>
  </Panel>
</PageLink>
`;

exports[`Signals SpamTrapsPreview Component renders loading correctly 1`] = `
<PanelLoading
  minHeight="170px"
/>
`;
